# CoA

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  CoA_main.cpp  CoA_settings.h  README.md
a_star/: a_star.cpp  a_star.h  a_star_example.cpp  cell.cpp  cell.h
brute_force/: brute_force.cpp  brute_force.h  brute_force_example.cpp  cell.cpp  cell.h
clock/: clock.cpp  clock.h  clock_example.cpp  tracer.cpp  tracer.h
dijkstra/: cell.cpp  cell.h  dijkstra.cpp  dijkstra.h  dijkstra_example.cpp
maze/: maze_generator.cpp  maze_generator.h  maze_generator_example.cpp
maze_generator/: maze_generator.cpp  maze_generator.h  maze_generator_example.cpp
maze_painter/: maze_painter.cpp  maze_painter.h  painter_example.cpp
path_search/: cell.cpp  cell.h  graph_base.cpp  graph_base.h  path_search.h
path_search/a_star/: a_star.cpp  a_star.h  a_star_example.cpp  cell.h
path_search/depth_first/: depth_first.cpp  depth_first.h
path_search/dijkstra/: dijkstra.cpp  dijkstra.h  dijkstra_example.cpp
path_search/greedy_best_first/: greedy_best_first.cpp  greedy_best_first.h
path_search/greedy_pdistance/: greedy_pdistance.cpp  greedy_pdistance.h
path_search/random_step/: random_step.cpp  random_step.h
path_search/random_walk/: random_walk_algorithm.cpp  random_walk_algorithm.h  random_walk_example.cpp
path_search/right_hand_rule/: right_hand_rule.cpp  right_hand_rule.h
plane/: CMakeLists.txt  cell.h  cell_type.h  plane.cpp  plane.h  plane_example.cpp
random_walk/: random_walk_algorithm.cpp  random_walk_algorithm.h  random_walk_example.cpp
root_enabled/: root_enabled.cpp
sample_algorithm/: cell.cpp  cell.h  cell_type.cpp  sample.cpp  sample.h  sample_example.cpp
saved_mazes/: saved_mazes.cpp
sfml_window/: color_scheme.cpp  color_scheme.h  graph.cpp  graph.h  graph_example.cpp  window.cpp  window.h  window_plane.cpp  window_plane.h
testing/: DijkstraRandom.txt  dijkstra_testing.cpp  pr_file_format.cpp  pr_file_format.h  root_data_loader.cpp  testing.cpp
utility/: CMakeLists.txt  clock.cpp  clock.h  clock_example.cpp  coord.cpp  coord.h
